--- a/.travis.yml
+++ b/.travis.yml
@@ -5,8 +5,6 @@ php:
   - 5.3
   - 5.4
 
-before_script:
-  - curl -s http://getcomposer.org/installer | php -- --quiet
-  - php composer.phar install
+before_script: composer install
 
 script: phpunit -c tests/complete.phpunit.xml
