Create-project command remove  all VCS history
In fact, there are some issues with create-project command.
When people create project with composer, they do not think to
delete main .git folder. So they embed 3th history in theirs own
repository. (see
https://connect.sensiolabs.com/profile/jmoati/project/gitoliteadmin
for instance)

More over, people may not use git.

--- a/composer.json
+++ b/composer.json
@@ -27,7 +27,8 @@
         "seld/jsonlint": "1.*",
         "symfony/console": "2.1.*",
         "symfony/finder": "2.1.*",
-        "symfony/process": "2.1.*"
+        "symfony/process": "2.1.*",
+        "symfony/filesystem": "2.1.*"
     },
     "suggest": {
         "ext-zip": "Enabling the zip extension allows you to unzip archives, and allows gzip compression of all internet traffic",
