--- a/composer.json
+++ b/composer.json
@@ -25,7 +25,7 @@
         "php": ">=5.3.2",
         "justinrainbow/json-schema": "1.1.*",
         "seld/jsonlint": "1.*",
-        "symfony/console": "2.1.*",
+        "symfony/console": "2.1.*@dev",
         "symfony/finder": "2.1.*",
         "symfony/process": "2.1.*"
     },
