Consistently describe composer as dep mgr as opposed to package mgr
Closes #1207.

--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
     "name": "composer/composer",
-    "description": "Package Manager",
+    "description": "Dependency Manager",
     "keywords": ["package", "dependency", "autoload"],
     "homepage": "http://getcomposer.org/",
     "type": "library",
