--- a/composer.json
+++ b/composer.json
@@ -29,6 +29,9 @@
         "symfony/finder": "~2.1",
         "symfony/process": "~2.1@dev"
     },
+    "require-dev": {
+        "phpunit/phpunit": "3.7.*"
+    },
     "suggest": {
         "ext-zip": "Enabling the zip extension allows you to unzip archives, and allows gzip compression of all internet traffic",
         "ext-openssl": "Enabling the openssl extension allows you to access https URLs for repositories and packages"
