--- a/.travis.yml
+++ b/.travis.yml
@@ -6,10 +6,6 @@ php:
   - 5.4
   - 5.5
 
-matrix:
-  allow_failures:
-    - php: 5.5
-
-before_script: composer install
+before_script: composer install --prefer-source
 
 script: phpunit -c tests/complete.phpunit.xml
