--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,10 @@ php:
   - 5.4
   - 5.5
 
+matrix:
+  allow_failures:
+    - php: 5.3.3
+
 before_script: 
     - echo '' > ~/.phpenv/versions/$(phpenv version-name)/etc/conf.d/xdebug.ini
     - composer install --dev --prefer-source
