--- a/composer.json
+++ b/composer.json
@@ -25,9 +25,9 @@
         "php": ">=5.3.2",
         "justinrainbow/json-schema": "1.1.*",
         "seld/jsonlint": "1.*",
-        "symfony/console": "~2.3@dev",
+        "symfony/console": "~2.3",
         "symfony/finder": "~2.2",
-        "symfony/process": "~2.1@dev"
+        "symfony/process": "~2.1"
     },
     "require-dev": {
         "phpunit/phpunit": "~3.7.10"
