--- a/composer.json
+++ b/composer.json
@@ -30,7 +30,8 @@
         "symfony/process": "~2.1"
     },
     "require-dev": {
-        "phpunit/phpunit": "~3.7.10"
+        "phpunit/phpunit": "~3.7.10",
+        "mikey179/vfsStream" : "1.2.*"
     },
     "suggest": {
         "ext-zip": "Enabling the zip extension allows you to unzip archives, and allows gzip compression of all internet traffic",
