Updated to remove vfsStreams (no longer needed by tests) Updated Perforce to cleanup, modified VcsRepository to call cleanup on Driver class Updated tests, perforce constructor to make tests cleaner/easier

--- a/composer.json
+++ b/composer.json
@@ -30,8 +30,7 @@
         "symfony/process": "~2.1"
     },
     "require-dev": {
-        "phpunit/phpunit": "~3.7.10",
-        "mikey179/vfsStream" : "1.2.*"
+        "phpunit/phpunit": "~3.7.10"
     },
     "suggest": {
         "ext-zip": "Enabling the zip extension allows you to unzip archives, and allows gzip compression of all internet traffic",
