--- a/.travis.yml
+++ b/.travis.yml
@@ -5,10 +5,15 @@ php:
   - 5.3
   - 5.4
   - 5.5
+  - hhvm
+
+matrix:
+  allow_failures:
+    - php: hhvm
 
 before_script:
     - sudo apt-get install parallel
-    - echo '' > ~/.phpenv/versions/$(phpenv version-name)/etc/conf.d/xdebug.ini
+    - rm -f ~/.phpenv/versions/$(phpenv version-name)/etc/conf.d/xdebug.ini
     - composer install --dev --prefer-source
     - git config --global user.name travis-ci
     - git config --global user.email travis@example.com
