--- a/composer.json
+++ b/composer.json
@@ -27,7 +27,7 @@
         "seld/jsonlint": "1.*",
         "symfony/console": "~2.3",
         "symfony/finder": "~2.2",
-        "symfony/process": "~2.1@dev"
+        "symfony/process": "~2.1"
     },
     "require-dev": {
         "phpunit/phpunit": "~3.7.10"
