--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
     "name": "composer/composer",
-    "description": "Dependency Manager",
+    "description": "Composer helps you declare, manage and install dependencies of PHP projects, ensuring you have the right stack everywhere.",
     "keywords": ["package", "dependency", "autoload"],
     "homepage": "http://getcomposer.org/",
     "type": "library",
