--- a/.travis.yml
+++ b/.travis.yml
@@ -6,10 +6,12 @@ php:
   - 5.4
   - 5.5
   - hhvm
+  - 5.6
 
 matrix:
   allow_failures:
     - php: hhvm
+    - php: 5.6
 
 before_script:
     - sudo apt-get install parallel
