--- a/.travis.yml
+++ b/.travis.yml
@@ -22,3 +22,6 @@ before_script:
 
 script:
     - ls -d tests/Composer/Test/* | parallel --gnu --keep-order 'echo "Running {} tests"; ./vendor/bin/phpunit -c tests/complete.phpunit.xml {};' || exit 1
+
+git:
+  depth: 5
